src/test/deca/context/valid/print_int.deca
// Description :
// test de l'affichage d'un entier
//
// Résultats :
// ok

{
  println(5);
}
