src/test/deca/context/invalid/mod_int_float.deca
// Description :
// test d'un modulo entre un entier et un flottant
//
// Résultats :
// Erreur contextuelle
// Ligne 9 : Opération mod impossible avec des objets de type float (règle 3.33)

{
  1 % 5.0;
}
